--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
                 <a href="https://wa.me/+254115735292" target="_blank">
                     <button>Contact Me</button>
                 </a>
+                <a href="https://drive.google.com/uc?export=download&id=1jBLg0lSiVN2wqaDb7EM3BAuDyIzGKxbz" download><button>Download cv</button></a>
+
                 
             </div>
             <div class="socials">
@@ -110,46 +112,56 @@
         </div>
     </section>
     <section class="portfolio" id="portfolio-loc">
-        <h1>Portfolio Projects</h1>
+        <h1>My Projects</h1>
         <div class="portfolio-cards">
             <div class="portfolio-card">
-                <img src="education.PNG" alt="">
+                <img src="agritech.png" alt="">
                 <div class="overlay">
-                    <h3>Education</h3>
-                    <p>My current education status.</p>
-                    <button>See More -></button>
+                    <h3>AgriTech</h3>
+                    <p>Farm managemennt system to monitor farm operations.</p>
+                    <h3>Technologies</h3>
+                    <p>Django <br> HTML <br> CSS <br> JAVASCRIPT <br>MySQL</p>
+                    <a href="https://github.com/Denisganga/TECHFARM"><button>Show project</button></a>
                 </div>
             </div>
             <div class="portfolio-card">
-                <img src="github.PNG" alt="">
+                <img src="techacademy.png" alt="">
                 <div class="overlay">
-                    <h3>My Projects</h3>
-                    <p>View my completed and ongoing projects on github</p>
-                    <button>See More -></button>
+                    <h3>TechAcademy</h3>
+                    <p>A website that connects learners to different learning websites</p>
+                    <h3>Technologies</h3>
+                    <p> HTML <br> CSS <br></p>
+                   <a href="https://github.com/Denisganga/TechAcademy"><button>Show project</button></a> 
                 </div>
             </div>
             <div class="portfolio-card">
-                <img src="honors.PNG" alt="">
+                <img src="doctor.PNG" alt="">
                 <div class="overlay">
-                    <h3>Honors or Awards</h3>
-                    <p>My awards and recognitions.</p>
-                    <button>See More -></button>
+                    <h3>Plant Doctor</h3>
+                    <p>An AI model that scans the image of various types of plant leafs and identifies whether healthy or the type of disease </p>
+                    <h3>Technologies</h3>
+                    <p>Matplotlib <br> PyTorch <br> CNN <br> Computer Vision</p>
+                    <a href="https://github.com/Denisganga/the_plant_doctor"><button>Show project</button></a> 
                 </div>
             </div>
             <div class="portfolio-card">
-                <img src="volunteer.PNG" alt="">
+                <img src="grams.PNG" alt="">
                 <div class="overlay">
-                    <h3>Volunteering</h3>
-                    <p>My volunteer experience.</p>
-                    <button>See More -></button>
+                    <h3>Yellow Mosaic disease and Rust Detection</h3>
+                    <p>A simple ML that identifies Yellow Mosaic disease and Rust on green grams</p>
+                    <h3>Technologies</h3>
+                    <p>Matplotlib <br> PyTorch <br> CNN <br> Computer Vision</p>
+                    <a href="https://github.com/Denisganga/RustAndYellowMosaicDiseaseDetection"><button>Show project</button></a>
                 </div>
             </div>
             <div class="portfolio-card">
-                <img src="experience.PNG" alt="">
+                <img src="cifar.PNG" alt="">
                 <div class="overlay">
-                    <h3>My Work Experience</h3>
-                    <p>Experiment gathered through out my career</p>
-                    <button>See More -></button>
+                    <h3>Image Classification Model</h3>
+                    <p>A ML Image classification model made using the CIFAR=10 Dataset</p>
+                    <h3>Technologies</h3>
+                    <p>PyTorch <br> CNN <br> Computer Vision</p>
+                    <a href="https://github.com/Denisganga/ImageClassificationModel"><button>Show project</button></a>
                 </div>
             </div>
             <div class="portfolio-card">
@@ -157,6 +169,7 @@
                 <div class="overlay">
                     <h3>Soft Skills</h3>
                     <p>Soft skills and abilities i have learn throughout my journey</p>
+                    <p>good communication<br>team work <br>self condination</p>
                     <button>See More -></button>
                 </div>
             </div>
@@ -173,9 +186,11 @@
                     <h3>Machine Learning, Deep Learning</h3>
                     <p>I got 1+ years of experience on the field of AI. <br>
                         Working on personal projects has helped me alot in gaining hands on skills on creating intelligent systems,
-                        with completed projects.
+                        The use of ML has helped me alot on this journey.
 
                     </p>
+                    <h3>Technologies</h3>
+                    <p>Matplotlib-Numpy <br> PyTorch-tensors-CNN - Computer Vision <br> </p>
                 </div>
             </div>
             <div class="exp">
@@ -184,7 +199,10 @@
                     <h3>Django Developer</h3>
                     <p>I got an experience in building web applications where i have successfully done a web application project using Django. The project also gave
                         me hands on skills on HTML,CSS and JS
+                        
                     </p>
+                    <h3>Technologies</h3>
+                    <p>-Django <br> -HTML <br> -CSS <br> -JAVASCRIPT <br> -MySQL</p>
                 </div>
             </div>
         </div>
